--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-*/node_modules
+/node_modules
 /.pnp
 .pnp.js
 .yarn/install-state.gz
@@ -25,12 +25,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
+# All env files
 */.env
 .env*.local
-
-
-
 
 # vercel
 .vercel
@@ -38,3 +35,4 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+node_modules
